changes for the affilaite started

--- a/checkout.html
+++ b/checkout.html
@@ -111,6 +111,9 @@
                                 <a class="nav-link" href="#">Services</a>
                             </li>
                             <li class="nav-item active">
+                                <a class="nav-link" href="affiliate">Affiliate</a>
+                            </li>
+                            <li class="nav-item active">
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
                         </ul>
@@ -680,7 +683,7 @@
                                 <input type="text" class="form-control" name="postcode" id="postcode" aria-describedby="postcode" placeholder="Enter Postcode">
                             </div>
                             <div class="form-group" style="margin-top:4px;">
-                            <label for="other_details">Other Details</label>
+                            <label for="other_details">Additional Details</label>
                             <textarea class="form-control" name="other_details" id="other_details" rows="3"></textarea>
                             </div>
                         </div>
