--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                                 <a class="nav-link" href="#">Services</a>
                             </li>
                             <li class="nav-item active">
+                                <a class="nav-link" href="affiliate">Affiliate</a>
+                            </li>
+                            <li class="nav-item active">
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
                         </ul>
@@ -95,7 +98,7 @@
                         data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top:20px;
                     outline:none;cursor:pointer;background-color:#e43b2c;margin-left:785px;border-radius:3px;padding:10px;"
                         aria-disabled="false" data-google-font="Oswald">
-                        <a href="page"
+                        <a href="checkout"
                             class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 mfs_20"
                             style="color:rgb(255, 255, 255);font-weight:600;font-size:26px;" rel="noopener noreferrer">
                             <span class="elButtonMain font-Oswald-l">GET THE "EARLY BIRD OFFER" @80% OFF</span>
@@ -472,7 +475,7 @@
                         </div>
                     </div>                   
                 </div>
-                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:30px;">If you need to catch up to rest of the students <a style="color:red;" href="page"> here ...</a></h2>
+                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:30px;">If you need to catch up to rest of the students <a style="color:red;" href="checkout"> here ...</a></h2>
             </div>
         </div>
         <!-- content 8 -->
@@ -599,7 +602,7 @@
                         </span>
                     </div>
                     <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
-                        <a href="page" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
+                        <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
                             <span class="elButtonMain">GET THE "EARLY BIRD OFFER" @80% OFF BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
                             </span>
                             <span class="elButtonSub"></span>
@@ -645,7 +648,7 @@
                         </div>
                     </div>                   
                 </div>
-                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:30px;">For more Such videos <a style="color:red;" href="page"> here ...</a></h2>
+                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:30px;">For more Such videos <a style="color:red;" href="checkout"> here ...</a></h2>
             </div>
         </div>
         <!-- content 12 -->
@@ -710,7 +713,7 @@
                     </div>
                 </div>
                 <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
-                    <a href="page" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
+                    <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
                         <span class="elButtonMain">GET THE "EARLY BIRD OFFER" @80% OFF BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
                         </span>
                         <span class="elButtonSub"></span>
@@ -755,7 +758,7 @@
                         </span>
                     </div>
                     <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
-                        <a href="page" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
+                        <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
                             <span class="elButtonMain">GET THE "EARLY BIRD OFFER" @80% OFF BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
                             </span>
                             <span class="elButtonSub"></span>
@@ -864,7 +867,7 @@
                 </div>
                 <div class="col-md-12" style="display:flex;justify-content:center;padding-bottom:40px !important;padding:0px 40px;">
                     <div class="elAlign_center font-Oswald-m" id="tmp_button-86350" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top:20px;outline:none;cursor:pointer;background-color:#e43b2c;border-radius:3px;padding:30px;" aria-disabled="false" data-google-font="Oswald">
-                        <a href="page"
+                        <a href="checkout"
                             class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 mfs_20"
                             style="color:rgb(255, 255, 255);font-weight:600;font-size:50px;" rel="noopener noreferrer">
                             <span class="elButtonMain font-Oswald-l">GET THE "EARLY BIRD OFFER" @80% OFF</span>
@@ -1235,7 +1238,7 @@
                 <div class="col-md-12" style="padding:20px 0px;display:flex;justify-content:center;">
                     <iframe width="740" height="450" src="https://www.youtube.com/embed/bTkjklDs2Q4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div> 
-                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:45px;padding:20px 0px;">If you need to catch up to rest of the students <a style="color:red;" href="page"> here ...</a></h2>                
+                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:45px;padding:20px 0px;">If you need to catch up to rest of the students <a style="color:red;" href="checkout"> here ...</a></h2>                
             </div>
         </div>
         <!-- content 8 -->
@@ -1355,7 +1358,7 @@
                         </span>
                     </div>
                     <div class="font-Oswald-b" style="outline:none;display:flex;justify-content:center;">
-                        <a href="page" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:53px;padding:20px;border-radius:10px;display:flex;text-align:center;" rel="noopener noreferrer">
+                        <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:53px;padding:20px;border-radius:10px;display:flex;text-align:center;" rel="noopener noreferrer">
                             <span class="elButtonMain">GET THE "EARLY BIRD OFFER" @80% OFF BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
                             </span>
                             <span class="elButtonSub"></span>
@@ -1397,7 +1400,7 @@
                 <div class="col-md-12" style="padding:20px 0px;display:flex;justify-content:center;">
                     <iframe width="740" height="450" src="https://www.youtube.com/embed/bTkjklDs2Q4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div> 
-                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:45px;padding:20px 0px;">For more Such videos <a style="color:red;" href="page"> here ...</a></h2>                
+                <h2 class="font-Oswald-b" style="text-align:center;color:#000;font-size:45px;padding:20px 0px;">For more Such videos <a style="color:red;" href="checkout"> here ...</a></h2>                
             </div>
         </div>
         <!-- content 12 -->
@@ -1456,7 +1459,7 @@
                     </div>
                 </div>
                 <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
-                    <a href="page" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
+                    <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
                         <span class="elButtonMain">GET THE "EARLY BIRD OFFER" @80% OFF BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
                         </span>
                         <span class="elButtonSub"></span>
@@ -1501,7 +1504,7 @@
                         </span>
                     </div>
                     <div class="font-Oswald-b" style="outline:none;display:flex;justify-content:center;">
-                        <a href="page" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:53px;padding:20px;border-radius:10px;display:flex;text-align:center;" rel="noopener noreferrer">
+                        <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:53px;padding:20px;border-radius:10px;display:flex;text-align:center;" rel="noopener noreferrer">
                             <span class="elButtonMain">GET THE "EARLY BIRD OFFER" @80% OFF BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
                             </span>
                             <span class="elButtonSub"></span>
