update footer ,text and delete extra images

--- a/affiliate.html
+++ b/affiliate.html
@@ -237,16 +237,15 @@
         <div class="container-fluid" style="background-color:#fff;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
                 <b class="font-Oswald-b" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">
-                Got Any Questions or Want to be a Speaker? Write to us.</b>
+                Got Any Questions ? Write to us.</b>
                 <br>
-                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">hello@onlinemillionairesummit.in</b>
+                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);"><a href="mailto:support@finstreet.in">support@finstreet.in</a></b>
             </div>
         </div>
         <!-- content 4 -->
         <div class="container-fluid" style="background-color:#000;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
-                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);"> © Online Millionaire Summit. 2020. All Rights Reserved. <a href="#">Privacy Policy</a></b>
-                <b class="font-roboto-r" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);">This site is not a part of the Facebook website or Facebook, Inc. Additionally, this site is NOT endorsed by Facebook in<br>any way. FACEBOOK is a trademark of Facebook, Inc.</b>
+                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);">Copyright &copy; 2019 All Right Reserved. Designed By <a rel="nofollow" href="https://www.quadbtech.com" target="_blank">QuadBTech</a></b>
             </div>
         </div>
     </div>
@@ -265,7 +264,7 @@
                                 </div>
                             </div>
                             <div class="col-10 position-relative" style="background: #00abc9 0% 0% no-repeat padding-box;">
-                                <div class="position-absolute w-100" style="top:10%;">
+                                <div class="position-absolute w-100" style="top:35%;">
                                     <p class="footer-text font-weight-light text-center" style="font-size:50px;margin-bottom:10px; font-family: europhonic;color:#231c62;" onclick="window.location = '/'">Home</p>
                                     <p class="footer-text font-weight-light text-center" style="font-size:50px;margin-bottom:10px; font-family: europhonic;color:#fff;" onclick="window.location = 'signup'">Signup</p>
                                     <p class="footer-text font-weight-light text-center" style="font-size:50px;margin-bottom:10px; font-family: europhonic;color:#fff;" onclick="window.location = 'login'">Login</p>
@@ -452,16 +451,15 @@
         <div class="container-fluid" style="background-color:#fff;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
                 <b class="font-Oswald-b" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">
-                Got Any Questions or Want to be a Speaker? Write to us.</b>
+                Got Any Questions ? Write to us.</b>
                 <br>
-                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">hello@onlinemillionairesummit.in</b>
+                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);"><a href="mailto:support@finstreet.in">support@finstreet.in</a></b>
             </div>
         </div>
         <!-- content 4 -->
         <div class="container-fluid" style="background-color:#000;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
-                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);"> © Online Millionaire Summit. 2020. All Rights Reserved. <a href="#">Privacy Policy</a></b>
-                <b class="font-roboto-r" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);">This site is not a part of the Facebook website or Facebook, Inc. Additionally, this site is NOT endorsed by Facebook in<br>any way. FACEBOOK is a trademark of Facebook, Inc.</b>
+                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);"> Copyright &copy; 2019 All Right Reserved. Designed By <a rel="nofollow" href="https://www.quadbtech.com" target="_blank">QuadBTech</a></b>
             </div>
         </div>
     </div>
