--- a/checkout.html
+++ b/checkout.html
@@ -86,15 +86,14 @@
 
 <body style="background-color:rgb(35, 28, 98);">
     <div class="d-none d-lg-block">
-    <!-- Navigation -->
+        <!-- Navigation -->
         <div class="fixed-top" style="padding:20px 0px;background-color:#00abc9;outline:none;">
             <nav class="navbar navbar-expand-lg navbar-dark static-top">
                 <div class="container">
                     <a class="navbar-brand" href="/">
                         <img src="images/logo.png" alt="" width="133" height="50">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -122,12 +121,12 @@
             </nav>
         </div>
         <!-- Page Content -->
-        <div class="container-fluid" style="margin-top:93px;height:345px;">
+        <div class="container-fluid" style="margin-top:93px;height:345px;display:flex;">
             <div class="container" style="padding:30px 0px">
                 <div class="col-md-12" style="border-radius:10px;">
-                    <div style="background-color:#fff;padding:20px;float:left;border-radius:10px;height:300px;">
-                        <div class="col-md-6" style="background-color:#fff;padding:20px;float:left;padding-top:30px;">
-                            <img src="images/logo.png" alt="" width="100%" height="200">
+                    <div style="background-color:#fff;padding:20px;float:left;border-radius:10px;height:300px;" class="col-md-8">
+                        <div class="col-md-6" style="background-color:#fff;padding: 10px;float:left;justify-content:center;display:flex;">
+                            <img src="images/image.png" alt="" style="border-radius:10px;">
                         </div>
                         <div class="col-md-6 font-roboto-m" style="background-color:#fff;padding-left:20px !important;float:left;">
                             <p style="font-size:24px;line-height:33px;padding:10px 0px;text-align:center;">Crypto-Nite 2020</p>
@@ -135,30 +134,21 @@
                                 <li><b>Date:</b> April 14, 2020, 11 a.m.</li>
                                 <li><b>End Date:</b> April 18, 2020, 6 p.m.</li>
                                 <li><b>Venue:</b> Online Event</li>
-                                <p style="font-size:25px;padding-bottom:10px;padding-top:5px;"> <strike><b>1,997</b></strike> <span style="color:#2fbe6d;">497</span></p>
+                                <p style="font-size:25px;padding-top:5px;"> <strike><b>1,997</b></strike> <span style="color:#2fbe6d;">497</span></p>
                             </ul>
                             <div style="padding:0px 10px;">
-                                <a data-toggle="modal" data-target="#razorpay" class="btn-green btn-block caps" style="padding:10px;background-color:#2fbe6d;border-radius:10px;color:#fff;font-size:20px;text-align:center;">Buy Tickets</a>
+                                <a data-toggle="modal" data-target="#razorpay" class="btn-green btn-block caps cursor-pointer" style="padding:10px;background-color:#2fbe6d;border-radius:10px;color:#fff;font-size:20px;text-align:center;">Buy Tickets</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3" style="background-color:#fff;border-radius: 10px;float: left;margin: 0px 15px;">
-                        <div class="font-roboto-r" style="padding:30px 0px;">
-                            <a href="/" target="_blank">
-                                <span style="color:#000;"><img alt="" src="images/cropped-Fin-270x270.jpg" style="height:20px;border-radius:2px;display:inline-block">
-                                    <span style="vertical-align:middle;font-size:19px;" class="caps strong soft-half--left seller-name store__link font-roboto-b">Online Millionaire Summit
-                                    </span>
-                                </span>
-                            </a>
-                            <div class="soft--top sidebar-content">
-                                <a href="/" target="_blank" rel="noopener noreferrer">
-                                    <div class="caps font-roboto-r" style="font-size:14px;">null Product on Store</div>
-                                </a>
-                                <a href="#">
-                                    <div class="btn btn-block sidebar-content" style="margin-top:14px!important;border:2px solid #52beff;">VIEW STORE</div>
-                                </a>
-                            </div>
+                        <div class="font-roboto-r" style="padding: 20px 0px;justify-content:center;display:flex;">
+                            <span style="color: #000;">
+                                <span style="vertical-align:middle;font-size: 24px;" class="caps strong soft-half--left seller-name store__link font-roboto-b">ABOUT ME</span>
+                                <img src="images/Finstreet-min.jpg" alt="" width="250">
+                            </span>                               
                         </div>
+                        <p style="font-size: 17px;font-family:roboto-r;padding-bottom:15px;text-align:justify;">Finstreet is the first and only solution in India which focuses to increase your monthly income and overall wealth by giving you precise and researched content on passive income and investment options. We at Finstreet always believe the fact that 1% of the population which hold more than 90% of world wealth is always smarter and these attributes can be embedded artificially via smart and vigrous researched content.</p>  
                     </div>
                 </div>
             </div>
@@ -167,8 +157,8 @@
         <div class="container-fluid" style="padding-bottom:15px;">
             <div class="container" style="padding:0px;">
                 <div class="col-md-10" style="border-radius:10px;">
-                    <div style="width:95%;">
-                        <div class="col-md-11 font-roboto-r" style="padding:25px 30px;background-color:#fff;border-radius:10px;">
+                    <div style="width:890px;">
+                        <div class="col-md-10 font-roboto-r" style="padding:25px 30px;background-color:#fff;border-radius:10px;">
                             <p style="font-size: 17px;font-family:roboto-m;text-decoration:underline;">DESCRIPTION</p>
                             <p style="font-size: 23px;font-family:roboto-m;padding-top:10px;">India's Biggest Cryptocurrency Event Is HERE ..!</p>
                             <p style="font-size: 17px;font-family:roboto-r;padding: 15px 0px;">After having huge success in 2020 with 5,492 students we are here to provide more value.
@@ -219,13 +209,13 @@
                 <b class="font-Oswald-b" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">
                 Got Any Questions ? Write to us.</b>
                 <br>
-                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">support@finstreet.in</b>
+                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);"><a href="mailto:support@finstreet.in">support@finstreet.in</a></b>
             </div>
         </div>
         <!-- content 1 -->
         <div class="container-fluid" style="background-color:#000;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
-                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);">Copyright &copy; 2019 All Right Reserved. Designed By <a href="https://www.quadbtech.com">QuadBTech</a></b>
+                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);">Copyright © 2019 All Right Reserved. Designed By <a rel="nofollow" href="https://www.quadbtech.com" target="_blank">QuadBTech</a></b>
             </div>
         </div>
     </div>
@@ -255,15 +245,16 @@
                 </div>        
                 <div class="nav-container">
                     <div id="mobile-navbar">
-                    <div style="position: fixed;z-index: 10;right: 20px;margin-top: -30px;z-index:15 !important;" id="open-drawer">
-                        <hr style="width: 40px;height: 4px;background-color: white;margin-top: 10px;margin-bottom: 0px;border-radius: 100px;">
-                        <hr style="width: 40px;height: 4px;background-color: white;margin-top: 10px;margin-bottom: 0px;border-radius: 100px;">
-                        <hr style="width: 40px;height: 4px;background-color: white;margin-top: 10px;margin-bottom: 0px;border-radius: 100px;">
-                    </div>
-                    <div class="d-flex position-fixed align-items-center w-100" style="z-index: 10;margin-top: -30px;margin-left: 15px;">
-                        <a class="navbar-brand header-text" id="mobile-header-logo-text" href="/">
-                            <img class="logo-header" src="images/logo.png" alt="" style="width: 150px;">
-                        </a>
+                        <div style="position: fixed;z-index: 10;right: 20px;margin-top: -30px;z-index:15 !important;" id="open-drawer">
+                            <hr style="width: 40px;height: 4px;background-color: white;margin-top: 10px;margin-bottom: 0px;border-radius: 100px;">
+                            <hr style="width: 40px;height: 4px;background-color: white;margin-top: 10px;margin-bottom: 0px;border-radius: 100px;">
+                            <hr style="width: 40px;height: 4px;background-color: white;margin-top: 10px;margin-bottom: 0px;border-radius: 100px;">
+                        </div>
+                        <div class="d-flex position-fixed align-items-center w-100" style="z-index: 10;margin-top: -30px;margin-left: 15px;">
+                            <a class="navbar-brand header-text" id="mobile-header-logo-text" href="/">
+                                <img class="logo-header" src="images/logo.png" alt="" style="width: 150px;">
+                            </a>
+                        </div>
                     </div>
                 </div>            
             </header>
@@ -271,10 +262,10 @@
 
         <!-- Page Content -->
         <div class="container-fluid" style="width:100%;padding:15px;">
-            <div class="container-fluid" style="margin-top: 115px;padding: 0px 0px;background-color:#fff;height: 420px;border-radius:10px;">
+            <div class="container-fluid" style="margin-top: 115px;padding: 0px 0px;background-color:#fff;height: 525px;border-radius:10px;">
                 <div>
                     <div class="col-md-12" style="padding: 20px;float:left;">
-                        <img src="images/logo.png" alt="" width="100%" height="125">
+                        <img src="images/image.png" alt="" width="100%">
                     </div>
                     <div class="col-md-12 font-roboto-m" style="padding: 0px 0px;float:left;">
                         <p style="font-size: 23px;text-align:center;">Crypto-Nite 2020</p>
@@ -334,22 +325,13 @@
             </div> 
             <div class="container-fluid" style="margin-top:20px;padding: 10px 0px;background-color:#fff;border-radius:10px;">
                 <div class="col-md-12 font-roboto-b" style="padding: 5px 20px;background-color:#fff;border-radius:10px;">
-                    <div class="font-roboto-r" style="padding:0px 0px;">
-                        <a href="/" target="_blank">
-                            <span style="color:#000;"><img alt="" src="images/cropped-Fin-270x270.jpg" style="height:20px;border-radius:2px;display:inline-block">
-                                <span style="vertical-align:middle;font-size:18px;" class="caps strong soft-half--left seller-name store__link font-roboto-b">Online Millionaire Summit
-                                </span>
-                            </span>
-                        </a>
-                        <div class="soft--top sidebar-content">
-                            <a href="/" target="_blank" rel="noopener noreferrer">
-                                <div class="caps font-roboto-r" style="font-size:14px;">null Product on Store</div>
-                            </a>
-                            <a href="#">
-                                <div class="btn btn-block sidebar-content" style="margin-top:14px!important;border:2px solid #52beff;">VIEW STORE</div>
-                            </a>
-                        </div>
-                    </div>                    
+                    <div class="font-roboto-r" style="padding: 20px 0px;justify-content:center;display:flex;">
+                        <span style="color: #000;">
+                            <span style="vertical-align:middle;font-size: 23px;" class="caps strong soft-half--left seller-name store__link font-roboto-b">ABOUT ME</span>
+                            <img src="images/Finstreet-min.jpg" alt="" width="250" style="justify-content:center;display:flex;padding-top:10px;">
+                        </span>                               
+                    </div>
+                    <p style="font-size: 15px;font-family:roboto-r;padding-bottom:15px;text-align:justify;">Finstreet is the first and only solution in India which focuses to increase your monthly income and overall wealth by giving you precise and researched content on passive income and investment options. We at Finstreet always believe the fact that 1% of the population which hold more than 90% of world wealth is always smarter and these attributes can be embedded artificially via smart and vigrous researched content.</p>                
                 </div>
             </div>          
         </div>
@@ -360,13 +342,13 @@
                 <b class="font-Oswald-b" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">
                 Got Any Questions ? Write to us.</b>
                 <br>
-                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">support@finstreet.in</b>
+                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);"><a href="mailto:support@finstreet.in">support@finstreet.in</a></b>
             </div>
         </div>
         <!-- content 1 -->
         <div class="container-fluid" style="background-color:#000;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
-                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);"> Copyright &copy; 2019 All Right Reserved. Designed By <a href="https://www.quadbtech.com">QuadBTech</a></b>
+                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);"> Copyright &copy; 2019 All Right Reserved. Designed By <a rel="nofollow" href="https://www.quadbtech.com" target="_blank">QuadBTech</a></b>
             </div>
         </div>
     </div>
@@ -397,7 +379,7 @@
                             </p>
                         </div>                                        
                         <div class="d-flex justify-content-center align-items-center" style="padding-bottom: 60px;" >
-                            <a class="text-uppercase font-roboto-b shadow-buy-now-button buy-now-button backToShop" onclick="window.location = '/'">Back to Shop</a>
+                            <a class="cursor-pointer text-uppercase font-roboto-b shadow-buy-now-button buy-now-button backToShop" onclick="window.location = '/'">Back to Shop</a>
                         </div>
                     </div>   
                 </div>
