--- a/index.html
+++ b/index.html
@@ -941,13 +941,13 @@
                 <b class="font-Oswald-b" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">
                 Got Any Questions ? Write to us.</b>
                 <br>
-                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">support@finstreet.in</b>
+                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);"><a href="mailto:support@finstreet.in">support@finstreet.in</a></b>
             </div>
         </div>
         <!-- content 17 -->
         <div class="container-fluid" style="background-color:#000;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
-                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);">Copyright &copy; 2019 All Right Reserved. Designed By <a href="https://www.quadbtech.com">QuadBTech</a></b>
+                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);">Copyright &copy; 2019 All Right Reserved. Designed By <a rel="nofollow" href="https://www.quadbtech.com" target="_blank">QuadBTech</a></b>
             </div>
         </div>
     </div>
@@ -1849,13 +1849,13 @@
                 <b class="font-Oswald-b" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">
                 Got Any Questions ? Write to us.</b>
                 <br>
-                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);">support@finstreet.in</b>
+                <b class="font-roboto-r" style="display:block;text-align:center;font-size:20px;color:rgb(0, 75, 145);"><a href="mailto:support@finstreet.in">support@finstreet.in</a></b>
             </div>
         </div>
         <!-- content 17 -->
         <div class="container-fluid" style="background-color:#000;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
-                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);"> Copyright &copy; 2019 All Right Reserved. Designed By <a href="https://www.quadbtech.com">QuadBTech</a></b>
+                <b class="font-Oswald-b" style="display:block;text-align:center;font-size:14px;color:rgba(255, 255, 255, 0.53);"> Copyright &copy; 2019 All Right Reserved. Designed By <a rel="nofollow" href="https://www.quadbtech.com" target="_blank">QuadBTech</a></b>
             </div>
         </div>
     </div>
