--- a/checkout.html
+++ b/checkout.html
@@ -131,8 +131,8 @@
                         <div class="col-md-6 font-roboto-m" style="background-color:#fff;padding-left:20px !important;float:left;">
                             <p style="font-size:24px;line-height:33px;padding:10px 0px;text-align:center;">Crypto-Nite 2020</p>
                             <ul style="font-size: 18px;padding: 0 0 0 25px;margin-bottom:0 !important;">
-                                <li><b>Date:</b> April 14, 2020, 11 a.m.</li>
-                                <li><b>End Date:</b> April 18, 2020, 6 p.m.</li>
+                                <li><b>Date:</b> April 12, 2020, 11 a.m.</li>
+                                <li><b>End Date:</b> April 14, 2020, 6 p.m.</li>
                                 <li><b>Venue:</b> Online Event</li>
                                 <p style="font-size:25px;padding-top:5px;"> <strike><b>1,997</b></strike> <span style="color:#2fbe6d;">497</span></p>
                             </ul>
@@ -144,11 +144,11 @@
                     <div class="col-md-3" style="background-color:#fff;border-radius: 10px;float: left;margin: 0px 15px;">
                         <div class="font-roboto-r" style="padding: 20px 0px;justify-content:center;display:flex;">
                             <span style="color: #000;">
-                                <span style="vertical-align:middle;font-size: 24px;" class="caps strong soft-half--left seller-name store__link font-roboto-b">ABOUT ME</span>
+                                <span style="vertical-align:middle;font-size: 24px;" class="caps strong soft-half--left seller-name store__link font-roboto-b">About Finstreet</span>
                                 <img src="images/Finstreet-min.jpg" alt="" width="250">
                             </span>                               
                         </div>
-                        <p style="font-size: 17px;font-family:roboto-r;padding-bottom:15px;text-align:justify;">Finstreet is the first and only solution in India which focuses to increase your monthly income and overall wealth by giving you precise and researched content on passive income and investment options. We at Finstreet always believe the fact that 1% of the population which hold more than 90% of world wealth is always smarter and these attributes can be embedded artificially via smart and vigrous researched content.</p>  
+                        <p style="font-size: 15px;font-family:roboto-r;padding-bottom:15px;text-align:justify;">Finstreet is the first and only solution in India which focuses to increase your monthly income and overall wealth by giving you precise and researched content on passive income and investment options. We at Finstreet always believe the fact that 1% of the population which hold more than 90% of world wealth is always smarter and these attributes can be embedded artificially via smart and vigrous researched content.</p>  
                     </div>
                 </div>
             </div>
@@ -174,7 +174,6 @@
                                 Some recorded a VIDEO<br>
                                 Some shared a DETAILED CASE STUDY<br>
                                 Some shared a WHITEBOARD SESSION<br>
-                                Some explained it all WITH AN INTERVIEW<br>
                                 But each of them had just *ONE GOAL IN MIND.</p>
                             <p style="font-size: 17px;font-family:roboto-r;padding-bottom: 15px;">What Can We Share or Teach So That People Don't Just Consume Information But Actually Take Some Action On It..*</p>
                             <p style="font-size: 23px;font-family:roboto-m;padding-top: 15px;">Here's what you get when you join -</p>
@@ -270,8 +269,8 @@
                     <div class="col-md-12 font-roboto-m" style="padding: 0px 0px;float:left;">
                         <p style="font-size: 23px;text-align:center;">Crypto-Nite 2020</p>
                         <ul style="font-size: 16px;padding: 0px 30px;">
-                            <li style="padding-top:10px;padding-bottom:5px;"><b>Date:</b> April 14, 2020, 11 a.m.</li>
-                            <li style="padding-bottom:5px;"><b>End Date:</b> April 18, 2020, 6 p.m.</li>
+                            <li style="padding-top:10px;padding-bottom:5px;"><b>Date:</b> April 12, 2020, 11 a.m.</li>
+                            <li style="padding-bottom:5px;"><b>End Date:</b> April 14, 2020, 6 p.m.</li>
                             <li style="padding-bottom: 5px;"><b>Venue:</b> Online Event</li>                           
                             <p style="font-size: 25px;"> <strike><b>1,997</b></strike> <span style="color:#2fbe6d;">497</span></p>
                         </ul>
@@ -297,7 +296,6 @@
                         some recorded a VIDEO<br>
                         some shared a DETAILED CASE STUDY<br>
                         some shared a WHITEBOARD SESSION<br>
-                        some explained it all WITH AN INTERVIEW<br>
                         But each of them had just *ONE GOAL IN MIND.<br>
                     </p>
                     <p style="font-size: 15px;font-family:roboto-r;padding-bottom:10px;">What Can We Share or Teach So That People Don't Just Consume Information But Actually Take Some Action On It..*</p>
@@ -327,7 +325,7 @@
                 <div class="col-md-12 font-roboto-b" style="padding: 5px 20px;background-color:#fff;border-radius:10px;">
                     <div class="font-roboto-r" style="padding: 20px 0px;justify-content:center;display:flex;">
                         <span style="color: #000;">
-                            <span style="vertical-align:middle;font-size: 23px;" class="caps strong soft-half--left seller-name store__link font-roboto-b">ABOUT ME</span>
+                            <span style="vertical-align:middle;font-size: 23px;" class="caps strong soft-half--left seller-name store__link font-roboto-b">About Finstreet</span>
                             <img src="images/Finstreet-min.jpg" alt="" width="250" style="justify-content:center;display:flex;padding-top:10px;">
                         </span>                               
                     </div>
@@ -418,7 +416,7 @@
                                     <tr class="cart-subtotal">
                                         <th>Discount(%)</th>
                                         <td><strong>
-                                            <span>-<span class="discount">80%</span></span>
+                                            <span>-<span class="discount">75%</span></span>
                                             </strong> 
                                         </td>
                                     </tr>  
