changes in the website

--- a/user-forgot-password.html
+++ b/user-forgot-password.html
@@ -21,8 +21,7 @@
         })(window,document,'script','dataLayer','GTM-PFRW8HP');</script>
         <!-- End Google Tag Manager -->
 
-
-    <title>Affiliate | Finstreet | India's 1st ever Financial Freedom Coach</title>
+    <title>User Login | Finstreet | India's 1st ever Financial Freedom Coach</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/cropped-Fin-270x270.jpg">
@@ -91,8 +90,8 @@
                                     <span class="sr-only">(current)</span>
                                 </a>
                             </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="affiliate">Affiliate
+                            <!-- <li class="nav-item active">
+                                <a class="nav-link" href="/">Home
                                     <span class="sr-only">(current)</span>
                                 </a>
                             </li>
@@ -100,8 +99,8 @@
                                 <a class="nav-link cursor-pointer text-white" href="signup">Signup</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="login">Login</a>
-                            </li>
+                                <a class="nav-link" href="user-login">Login</a>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
@@ -165,7 +164,7 @@
                         <div class="form-group">
                             <button type="submit" id="signup" class="btn btn-primary btn-block"> Change Password </button>
                         </div> <!-- form-group// -->
-                        <p class="text-center">Go back to <a href="login">Log In</a> page</p>
+                        <p class="text-center">Go back to <a href="user-login">Log In</a> page</p>
                     </form>
                 </article>
             </div> <!-- card.// -->
@@ -177,7 +176,7 @@
             <div class="card bg-light">
                 <article class="card-body mx-auto">
                     <h4 class="card-title mt-3 text-center">Password Changed Successfully</h4>
-                    <p class="text-center">Go back to <a href="login">Log In</a> page</p>
+                    <p class="text-center">Go back to <a href="user-login">Log In</a> page</p>
                 </article>
             </div>
         </div>
@@ -197,9 +196,9 @@
                             <div class="col-10 position-relative" style="background: #00abc9 0% 0% no-repeat padding-box;">
                                 <div class="position-absolute w-100" style="top:10%;">
                                     <p class="footer-text font-weight-light text-center" style="font-size:50px;margin-bottom:10px; font-family: europhonic;color:#231c62;" onclick="window.location = '/'">Home</p>
-                                    <p class="footer-text font-weight-light text-center" style="font-size:50px;margin-bottom:10px; font-family: europhonic;color:#fff;" onclick="window.location = 'affiliate'">Affiliate</p>
+                                    <!-- <p class="footer-text font-weight-light text-center" style="font-size:50px;margin-bottom:10px; font-family: europhonic;color:#fff;" onclick="window.location = '/'">Home</p>
                                     <p class="footer-text font-weight-light text-center" style="font-size:50px;margin-bottom:10px; font-family: europhonic;color:#fff;" onclick="window.location = 'signup'">Signup</p>
-                                    <p class="footer-text font-weight-light text-center" style="font-size:50px;margin-bottom:10px; font-family: europhonic;color:#fff;" onclick="window.location = 'login'">Login</p>
+                                    <p class="footer-text font-weight-light text-center" style="font-size:50px;margin-bottom:10px; font-family: europhonic;color:#fff;" onclick="window.location = 'login'">Login</p> -->
                                 </div>                          
                             </div>                        
                         </div>                
@@ -279,7 +278,7 @@
                         <div class="form-group">
                             <button type="submit" id="signup-mobile" class="btn btn-primary btn-block" style="font-size :2.5rem;"> Change Password </button>
                         </div> <!-- form-group// -->
-                        <p class="text-center" style="font-size:2rem;">Go back to <a href="login">Log In</a> page</p>
+                        <p class="text-center" style="font-size:2rem;">Go back to <a href="user-login">Log In</a> page</p>
                     </form>
                 </article>
             </div> <!-- card.// -->
@@ -291,7 +290,7 @@
             <div class="card bg-light">
                 <article class="card-body mx-2">
                     <h4 class="card-title mt-3 text-center" style="font-size: 3rem;">Password Changed Successfully</h4>
-                    <p class="text-center mb-3" style="font-size:2rem;">Go back to <a href="login">Log In</a> page</p>
+                    <p class="text-center mb-3" style="font-size:2rem;">Go back to <a href="user-login">Log In</a> page</p>
                 </article>
             </div>
         </div>
@@ -377,7 +376,7 @@
             if(error == ""){
                 $.ajax({
                     type:'POST',
-                    url:'php/forgot-password.php',
+                    url:'php/user-forgot-password.php',
                     dataType: "json",
                     data:{
                         
@@ -468,7 +467,7 @@
             if(error == ""){
                 $.ajax({
                     type:'POST',
-                    url:'php/forgot-password.php',
+                    url:'php/user-forgot-password.php',
                     dataType: "json",
                     data:{
                         email : $("#email-mobile").val(),
