--- a/checkout.html
+++ b/checkout.html
@@ -2,6 +2,25 @@
 <html>
 
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150643411-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-150643411-2');
+    </script>
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-PFRW8HP');</script>
+        <!-- End Google Tag Manager -->
+
     <title>Page | Finstreet | India's 1st ever Financial Freedom Coach</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -85,6 +104,13 @@
 </head>
 
 <body style="background-color:rgb(35, 28, 98);">
+    
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PFRW8HP"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+
     <div class="d-none d-lg-block">
         <!-- Navigation -->
         <div class="fixed-top" style="padding:20px 0px;background-color:#00abc9;outline:none;">
@@ -671,7 +697,7 @@
                             // alert("checked out");
                             var order_id = data.id;
                             var options = {
-                                "key": "rzp_test_BAnreND3t2AMOK", // Enter the Key ID generated from the Dashboard rzp_test_BAnreND3t2AMOK  rzp_live_rM5GAyc4Zcwzns
+                                "key": "rzp_live_rM5GAyc4Zcwzns", // Enter the Key ID generated from the Dashboard rzp_test_BAnreND3t2AMOK  rzp_live_rM5GAyc4Zcwzns
                                 "amount": parseInt(497*100), // Amount is in currency subunits. Default currency is INR. Hence, 29935 refers to 29935 paise or INR 299.35.    
                                 "currency": "INR",    
                                 "name": "Finstreet",
